--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 				}
 				window.open(h1, "_blank");
 				window.open(h2, "_blank");
+				window.open(h3, "_blank");
+				window.open(h4, "_blank");
+				window.open(h5, "_blank");
 			}
 		</script>
 
