更新解析接口

--- a/about.html
+++ b/about.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>全网VIP视频在线解析-关于</title>
 	</head>
+
 	<body>
-		暂时无信息^_^
+		<form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/minicroer" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/minicroer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+			<p><label for="tlemail">请输入您的电邮地址</label></p>
+			<p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="订阅" />
+		</form>
 	</body>
+
 </html>
