添加微博信息

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:wb="http://open.weibo.com/wb" lang="zh_CN">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>全网VIP视频在线解析-首页</title>
+		<title>VIP影视解析站</title>
 		<meta name="keywords" content="优酷VIP解析,爱奇艺VIP解析,腾讯VIP解析,乐视VIP解析,芒果VIP解析,全网视频解析,VIP在线解析,视频VIP在线解析,VIP视频在线解析" />
-		<meta name="description" content="VIP视频解析" />
+		<meta name="description" content="VIP视频解析站" />
+		<meta property="wb:webmaster" content="98d86619e7a8529d" />
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<link rel="shortcut icon" href="icon/DivX.ico" />
 		<link rel="bookmark" href="icon/DivX.ico" />
+		<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 		<style>
 			.colll-center-block {
 				float: none;
@@ -148,6 +150,7 @@
 								</li>
 							</ul>
 						</li>
+						
 					</ul>
 					<form class="navbar-form navbar-right" role="search" method="get">
 						<div class="form-group">
@@ -161,6 +164,9 @@
 		</nav>
 
 		<br><br><br><br>
+		<div style="display: none;">
+			<wb:bulkfollow uids="5510475336" type="0" width="150" count="1" color="C2D9F2,FFFFFF,0082CB,666666" titlebar="n" ></wb:bulkfollow>
+		</div>
 		<div class="container" style="padding-top:0px;" id="wbk">
 			<div class="alert alert-success alert-dismissible" role="alert">
 				<button type="button" class="close" data-dismiss="alert">
