--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 	</head>
 
 	<body>
+		<iframe width="100%" height="650" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=650&fansRow=1&ptype=1&speed=0&skin=9&isTitle=0&noborder=1&isWeibo=1&isFans=1&uid=5510475336&verifier=36f66de9&dpc=1"></iframe>
 		<form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/minicroer" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/minicroer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
 			<p><label for="tlemail">请输入您的电邮地址</label></p>
 			<p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="订阅" />
