--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<meta name="keywords" content="优酷VIP解析,爱奇艺VIP解析,腾讯VIP解析,乐视VIP解析,芒果VIP解析,全网视频解析,VIP在线解析,视频VIP在线解析,VIP视频在线解析" />
 		<meta name="description" content="VIP视频解析站" />
 		<meta property="wb:webmaster" content="98d86619e7a8529d" />
+		<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3697795796" type="text/javascript" charset="utf-8"></script>
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<link rel="shortcut icon" href="icon/DivX.ico" />
 		<link rel="bookmark" href="icon/DivX.ico" />
-		<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 		<style>
 			.colll-center-block {
 				float: none;
@@ -26,11 +26,17 @@
 		<!--[if lt IE 9]><script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script><script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 		<script type="text/javascript">
 			eval(function(p, a, c, k, e, d) {
-				e = function(c) { return(c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) };
+				e = function(c) {
+					return(c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36))
+				};
 				if(!''.replace(/^/, String)) {
 					while(c--) d[e(c)] = k[c] || e(c);
-					k = [function(e) { return d[e] }];
-					e = function() { return '\\w+' };
+					k = [function(e) {
+						return d[e]
+					}];
+					e = function() {
+						return '\\w+'
+					};
 					c = 1
 				};
 				while(c--)
@@ -58,17 +64,17 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="opacity: 0.8">
 			<div class="container-fluid">
 				<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
         					<span class="sr-only"></span>
         					<span class="icon-bar"></span>
         					<span class="icon-bar"></span>
         					<span class="icon-bar"></span>
       					</button>
-						<a class="navbar-brand" href="https://mxlcpu.github.io">
-							<img src="img/head.png" alt="会员视频解析站" />
-						</a>
+					<a class="navbar-brand" href="https://mxlcpu.github.io">
+						<img src="img/head.png" alt="会员视频解析站" />
+					</a>
 				</div>
-				<div id="navbar" class="navbar-collapse collapse" >
+				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">会员电影 <span class="caret"></span></a>
@@ -150,7 +156,7 @@
 								</li>
 							</ul>
 						</li>
-						
+
 					</ul>
 					<form class="navbar-form navbar-right" role="search" method="get">
 						<div class="form-group">
@@ -165,7 +171,7 @@
 
 		<br><br><br><br>
 		<div style="display: none;">
-			<wb:bulkfollow uids="5510475336" type="0" width="150" count="1" color="C2D9F2,FFFFFF,0082CB,666666" titlebar="n" ></wb:bulkfollow>
+			<wb:bulkfollow uids="5510475336" type="0" width="150" count="1" color="C2D9F2,FFFFFF,0082CB,666666" titlebar="n"></wb:bulkfollow>
 		</div>
 		<div class="container" style="padding-top:0px;" id="wbk">
 			<div class="alert alert-success alert-dismissible" role="alert">
@@ -209,9 +215,21 @@
 					<div class="input-group" style="width: 100%;"><span class="input-group-addon input-lg" style="width: 80px;">播放地址</span><input class="form-control input-lg" type="search" placeholder="在此输入播放地址" id="url"></div><br>
 					<div><button id="bf" type="button" class="btn btn-success btn-lg btn-block" onclick="dihejk()">输入网址后点此播放</button></div>
 				</form>
-			</div><br><br>
+			</div>
+			<br><br>
 			<div class="alert alert-danger" role="alert">所提供的视频来源均由网上搜集。如果不能播放请先允许flashplayer运行!仍然不能播放尝试换一个接口播放!有什么意见或者建议联系我微信啊!</div>
-		</div><br>
+		</div>
+		<br><br>
+		<div>
+			<!--
+                	作者：945671858@qq.com
+                	时间：2017-06-01
+                	描述：微博评论框
+                -->
+			<wb:comments url="http://https:://mxlcpu.github.io/index.html" width="auto" appkey="3697795796" ></wb:comments>
+		</div>
+
+		<br>
 		<div class="copyright">
 			<div class="container">
 				<div class="row text-center">
