修复一个错误

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 	时间：2017-06-01
                 	描述：微博评论框
                 -->
-			<wb:comments url="http://https:://mxlcpu.github.io/index.html" width="auto" appkey="3697795796" ></wb:comments>
+			<wb:comments url="https://mxlcpu.github.io/index.html" width="auto" appkey="3697795796" ralateuid="5510475336" ></wb:comments>
 		</div>
 
 		<br>
