添加微博悬浮窗

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		</nav>
 
 		<br><br><br><br>
-		<div style="display: none;">
+		<div style="position:fixed; top: 155px; right: 0px;  z-index:9999; float: right;">
 			<wb:bulkfollow uids="5510475336" type="0" width="150" count="1" color="C2D9F2,FFFFFF,0082CB,666666" titlebar="n"></wb:bulkfollow>
 		</div>
 		<div class="container" style="padding-top:0px;" id="wbk">
@@ -217,12 +217,12 @@
 				</form>
 			</div>
 			<br><br>
-			<div class="alert alert-danger" role="alert">所提供的视频来源均由网上搜集。如果不能播放请先允许flashplayer运行!仍然不能播放尝试换一个接口播放!有什么意见或者建议联系我微信啊!</div>
+			<div class="alert alert-danger" role="alert">所提供的视频来源均由网上搜集。如果不能播放请先允许FlashPlayer运行!仍然不能播放尝试换一个接口播放!有什么意见或者建议请在我微博上反馈(推荐)或在下面留言!</div>
 		</div>
 		<br><br>
-		<div>
+		<div style="display: none;">
 			<!--
-                	作者：945671858@qq.com
+                	作者：mxlcpu
                 	时间：2017-06-01
                 	描述：微博评论框
                 -->
@@ -244,4 +244,4 @@ window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="tex
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-sm-12"><br><span>Copyright By 初夏浅巷白衬衫©2017 All Rights Reserved.</div></div></div></div>
-</body></html>
+	</body></html>
