添加使用帮助

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">帮助关于 <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="cloud.html">使用帮助</a>
+									<a href="https://app.simplenote.com/p/DDxxJQ" target="_blank">使用帮助</a>
 								</li>
 								<li class="divider"></li>
 								<li>
