改用微博评论框

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		</nav>
 
 		<br><br><br><br>
-		<div style="display: none; position:fixed; top: 155px; right: 0px;  z-index:9999; float: right;">
+		<div style="position:fixed; top: 155px; right: 0px;  z-index:9999; float: right;">
 			<wb:bulkfollow uids="5510475336" type="0" width="150" count="1" color="C2D9F2,FFFFFF,0082CB,666666" titlebar="n"></wb:bulkfollow>
 		</div>
 		<div class="container" style="padding-top:0px;" id="wbk">
@@ -220,18 +220,18 @@
 			<div class="alert alert-danger" role="alert">所提供的视频来源均由网上搜集。如果不能播放请先允许FlashPlayer运行!仍然不能播放尝试换一个接口播放!有什么意见或者建议请在我<a href="http://weibo.com/945671858" target="_blank">微博(推荐)</a>,上反馈或在下面留言!</div>
 		</div>
 		<br><br>
-		<div style="display: none;">
+		<div >
 			<!--
                 	作者：mxlcpu
                 	时间：2017-06-01
-                	描述：微博评论框
+                	描述：wbcomments
                 -->
 			<wb:comments url="https://mxlcpu.github.io/index.html" width="auto" appkey="3697795796" ralateuid="5510475336" ></wb:comments>
 		</div>
 		<br />
 	<!--畅言PC和WAP自适应版-->
 <!--PC和WAP自适应版-->
-<div id="SOHUCS" sid="mxlcpu" ></div> 
+<div style="display: none" id="SOHUCS" sid="mxlcpu" ></div> 
 <script type="text/javascript"> 
 (function(){ 
 var appid = 'cyt2CfzAq'; 
