--- a/index.html
+++ b/index.html
@@ -287,5 +287,5 @@
 				<div class="row text-center">
 					<div class="col-sm-12"><br><span>Copyright By 初夏浅巷白衬衫©2017 All Rights Reserved.</div></div></div></div>
 	
-	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1262940820'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1262940820%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1262940820'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1262940820%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 	</body></html>
