--- a/index.html
+++ b/index.html
@@ -197,19 +197,17 @@
 					<div class="input-group" style="width: 100%;">
 						<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
 						<select class="form-control input-lg" id="jk">
-							<option value="http://api.47ks.com/webcloud/?v=" selected>接口一(全部网站通用)</option>
+							<option value="http://000o.cc/jx/ty.php?url=">接口一(全部网站通用)</option>
 							<option value="http://www.100000001.top/video.php?url=">接口二(全部网站通用)</option>
 							<option value="http://yun.mt2t.com/yun?url=">接口三(全部网站通用)</option>
-							<option value="http://www.yydy8.com/Common/?url=">接口四(全部网站通用)</option>
-							<option value="http://000o.cc/jx/ty.php?url=">接口五(全部网站通用)</option>
+							<option value="http://www.chepeijian.cn/jiexi/vip.php?url=">接口四(全部网站通用)</option>
+							<option value="http://v.72du.com/api/?url=">接口五(全部网站通用)</option>
 							<option value="http://qtzr.net/s/?qt=">接口六(全部网站通用)</option>
 							<option value="http://yyygwz.com/index.php?url=">接口七(全部网站通用)</option>
 							<option value="http://www.521804.com/jiexi/vip.php?url=">接口八(全部网站通用)</option>
 							<option value="http://www.wmxz.wang/video.php?url=">接口九(全部网站通用)</option>
 							<option value="http://v.72du.com/api/?url=">接口十(全部网站通用)</option>
 							<option value="http://www.200919.com/jiexi/vip.php?url=">接十一(全部网站通用)</option>
-							<option value="http://www.chepeijian.cn/jiexi/vip.php?url=">接口十二(全部网站通用)</option>
-							<option value="http://v.72du.com/api/?url=">接口十三(全部网站通用)</option>
 						</select>
 					</div><br/>
 					<div class="input-group" style="width: 100%;"><span class="input-group-addon input-lg" style="width: 80px;">播放地址</span><input class="form-control input-lg" type="search" placeholder="在此输入播放地址" id="url"></div><br>
