--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			<div class="alert alert-success alert-dismissible" role="alert">
 				<button type="button" class="close" data-dismiss="alert">
 <span aria-hidden="true">&times;</span><span class="sr-only">关闭</span></button>
-				<strong>支持手机,平板,电脑(效果最佳),请低调使用,不要转卖,如发现转卖本人会关站滴!</strong>
+				<strong>支持手机,平板,电脑(效果最佳),请低调使用,不要转卖,如发现转卖本人会关站滴!初次使用,请先阅读<a href="https://app.simplenote.com/p/DDxxJQ" target="_blank">使用帮助!</a>></strong>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<div class="panel panel-default">
