更新一大波接口

--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
 								</li>
 							</ul>
 						</li>
-
 					</ul>
 					<form class="navbar-form navbar-right" role="search" method="get">
 						<div class="form-group">
@@ -197,17 +196,25 @@
 					<div class="input-group" style="width: 100%;">
 						<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
 						<select class="form-control input-lg" id="jk">
-							<option value="http://000o.cc/jx/ty.php?url=">接口一(全部网站通用)</option>
-							<option value="http://www.100000001.top/video.php?url=">接口二(全部网站通用)</option>
-							<option value="http://yun.mt2t.com/yun?url=">接口三(全部网站通用)</option>
-							<option value="http://www.chepeijian.cn/jiexi/vip.php?url=">接口四(全部网站通用)</option>
-							<option value="http://v.72du.com/api/?url=">接口五(全部网站通用)</option>
-							<option value="http://qtzr.net/s/?qt=">接口六(全部网站通用)</option>
-							<option value="http://yyygwz.com/index.php?url=">接口七(全部网站通用)</option>
-							<option value="http://www.521804.com/jiexi/vip.php?url=">接口八(全部网站通用)</option>
-							<option value="http://www.wmxz.wang/video.php?url=">接口九(全部网站通用)</option>
-							<option value="http://v.72du.com/api/?url=">接口十(全部网站通用)</option>
-							<option value="http://www.200919.com/jiexi/vip.php?url=">接十一(全部网站通用)</option>
+							<option value="http://qtzr.net/s/?qt=">接口1(全部网站通用)</option>
+							<option value="http://yun.mt2t.com/yun?url=">接口2(全部网站通用)</option>
+							<option value="https://api.47ks.com/webcloud/?v=">接口3(全部网站通用)</option>
+							<option value="http://www.100000001.top/video.php?url=">接口4(全部网站通用)</option>
+							<option value="http://2.jx.72du.com/video.php?url=">接口5(全部网站通用)</option>
+							<option value="http://www.82190555.com/index/youku.php?url=">接口6(全部网站通用)</option>
+							<option value="http://api.662820.com/xnflv/index.php?url=">接口7(全部网站通用)</option>
+							<option value="http://www.82190555.com/index/youku.php?url=">接口8(全部网站通用)</option>
+							<option value="http://yyygwz.com/index.php?url=">接口9(全部网站通用)</option>
+							<option value="http://www.521804.com/jiexi/vip.php?url=">接口10(全部网站通用)</option>
+							<option value="http://www.wmxz.wang/video.php?url=">接口11(全部网站通用)</option>
+							<option value="http://www.200919.com/jiexi/vip.php?url=">接口12(全部网站通用)</option>
+							<option value="http://g.o.t.o.tutulai.cn/?url=">接口13(全部网站通用)</option>
+							<option value="http://000o.cc/jx/ty.php?url=">接口14(全部网站通用)</option>
+							<option value="http://www.chepeijian.cn/jiexi/vip.php?url=">接口15(全部网站通用)</option>
+							<option value="http://aikan-tv.com/?url=">接口16全部网站通用)</option>
+							<option value="http://jiexi.071811.cc/jx.php?url=">接口17(全部网站通用)</option>
+							<option value="http://api.baiyug.cn/vip/index.php?url=">接口18(全部网站通用)</option>
+							<option value="http://v.72du.com/api/?url=">接口19(全部网站通用)</option>
 						</select>
 					</div><br/>
 					<div class="input-group" style="width: 100%;"><span class="input-group-addon input-lg" style="width: 80px;">播放地址</span><input class="form-control input-lg" type="search" placeholder="在此输入播放地址" id="url"></div><br>
